public/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Montserrat&family=Open+Sans&family=Roboto&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}


/* element styles */
body {
    background: linear-gradient(67.2deg, #000000 4.69%, #1A0014 95.09%);
    width: 100%;
    height: 100%;
}
a {
  color: inherit; /* Use the default text color */
  text-decoration: none; /* Remove underline */
}


/* class styles */

/* navbar.ejs styles  */
.navbar {
    margin: 1% 2%;
}
.icon {
    width: 15%;
}
.icon img{
    width: 100px;
    height: 40px;
}
.nav {
    width: 85%;
}
.nav-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 110px;
    height: 35px;
    border: 1px solid #DBC8CA;
    background-color: #DBC8CA;
    border-radius: 10px;
    margin-left: 20px;
}
.nav-item:hover {
    background-color: #1A0014;
}
.nav-link {
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    line-height: 22px;
    color: #1A0014;
}
.nav-link:hover {
    color: #DBC8CA;
}
.active {
    color: #DBC8CA;
}
.li-active{
    background-color: #1A0014;
}
.my-btn {
    --bs-btn-border-width: 0;
    --bs-btn-border-color: transparent;
    --bs-btn-border-radius: 0;
    --bs-btn-hover-border-color: transparent;
}
.dropdown-menu {
    background-color: #DBC8CA;
    --bs-dropdown-link-hover-color: #1e2125;
    --bs-dropdown-link-hover-bg: #1A0014;
}
.dropdown-item:hover {
    background-color: linear-gradient(67.2deg, #000000 4.69%, #1A0014 95.09%);;
}
.checkbtn {
    position: absolute;
    font-size: 30px;
    color:  #DBC8CA;
    line-height: 80px;
    right: 0;
    margin-right: 30px;
    cursor: pointer;
    display: none;
}
#check {
    display: none;
}
.vector {
    position: absolute;
    z-index: -5;
}
/* end navbar.ejs atyles  */


/* homepage styles  */
.home {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: start;
    height: 550px;
}
.home-content {
    width: 70%;
    position: relative;
    margin-left: 3%;
    height: 80%;
}
.home-content > h2 {
    font-family: 'Comic Neue';
    font-style: normal;
    font-weight: 700;
    font-size: 60px;
    line-height: 74px;
    color: #FFFFFF;
    height: 35%;
}
.home-content > p {
    font-family: 'Comic Neue';
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 31px;
    color: #FFFFFF;
    height: 30%;
}
.home-content > button  {
    width: 200px;
    height: 40px;
    background: #DBC8CA;
    border-radius: 10px;
}
.home-content > button:hover {
    color: #DBC8CA;
    border: 1px solid #DBC8CA;
}
.home-img > img {
    height: 500px;
}
.full-mask {
    display: none;

}
/* end homepage styles */

/* aboutpage styles */
.about-container {
    position: relative;
    width: 85%;
    height: 95%;
    background: #DBC8CA;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 30px;
    z-index: -3;
    padding-bottom: 40px;
}
.about-container > p{
    height: 15%;
    text-align: center;
    width: 100%;
    font-family: 'Comic Neue';
    font-style: normal;
    font-weight: 700;
    font-size: 70px;
    line-height: 84px;
    color: #443D45;
}
.cards {
    height: 85%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;
    margin: 0 5%;
}
.card-holder {
    width: 75%;
    height: 110px;
    position: absolute;
    background: rgba(255, 255, 255, 0.4);
    border-radius: 20px;
    z-index: -2;
}
.card-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 5px 10px;
    margin-bottom: 10px;
    gap: 3px;
    background: #FFFFFF;
    border: 1px solid #000000;
    border-radius: 20px;
    width: 80%;
    height: 120px;
}
.move-right {
    position: relative;
    left: 20%;
    width: 95%;
}
.card-content > i {
    font-size: 20px;
    color: #212121;
}
.card-content > h3 {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 700;
    font-size: 32px;
    line-height: 35px;
}
.card-content > p {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 17px;
    color: #000000;
}
/* end aboutpage styles */

/* sign up page styles */
.glass-background {
    position: relative;
    background-image: url("../images/background.png");
    background-size: cover;
    box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.24);
    border-radius: 20px;
    width: 500px;
    height: 500px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 15px;
}
.sign-up-container > p {
    font-family: 'Comic Neue';
    font-style: normal;
    font-weight: 700;
    font-size: 48px;
    line-height: 58px;
    color: #FFFFFF;
    height: 10%;
}
.sign-up-container > form {
    width: 100%;
    height: 85%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.sign-up-container > form > div {
    display: flex;
}
.flash-div {
    display: flex;
    justify-content: center;
    align-items: center;
}
.flash-div > p {
    font-family: "Montserrat";
    color: #DBC8CA;
    font-size: 20px;
}
.user-div {
    justify-content: space-evenly;
}
.sign-up-container  label {
    font-family: 'Comic Neue';
    font-style: normal;
    font-weight: 400;
    font-size: 26px;
    line-height: 31px;
    color: #FFFFFF;
}
.sign-up-container input {
    width: 220px;
    height: 35px;
    background: rgba(219, 200, 202, 0.75);
    border: 1px solid #1A0014;
    border-radius: 10px;
    padding: 0 15px;
}
.password-div {
    position: relative;
    justify-content: space-evenly;
}
.fa-eye-slash {
    position: absolute;
    color: #1A0014;
    right: 15%;
    top: 25%;
}
.show-password {
    color: #FFFFFF;
    font-size: 20px;
}
.submit-div {
    justify-content: space-between;
    align-items: center;
}
/* ... */

